@@ -1,3 +1,7 @@
+2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-resource-view.c: Added undo for all resources properties.
+
 2004-01-25  Richard Hult  <richard@imendio.com>
 
 	* src/Makefile.am (sql_plugin): 
